# yt-transcribe

./: .gitignore  README.md  pyproject.toml
yt_transcribe/: __init__.py  cli.py  download.py  setup.py  transcribe.py
